Issue #122 - SummaryViewer: Truncated author on main page

--- a/src/style.css
+++ b/src/style.css
@@ -87,10 +87,6 @@ pre { margin: 0; }
 .diff-meta, .net-coverage-meta, .parent-meta {
 	margin-bottom: 10px;
 }
-.diff-viewer-link {
-	color: white;
-	font-weight: 100;
-}
 .net-lines-coverage-change {
 	display: block;
 	font-weight: bold;
@@ -134,6 +130,14 @@ pre { margin: 0; }
 	padding: 1em;
 	text-align: center;
 }
+tr.changeset td{
+	padding-right: 5px;
+}
+.changeset-description {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+}
 .changeset-viewer {
 	border-spacing: 0px;
 	margin: auto;
@@ -148,11 +152,6 @@ pre { margin: 0; }
 /* Changesets */
 .hidden-changeset {
 	display: none
-}
-.changeset-description {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
 }
 .changeset-summary {
 	text-align: center;
